--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,46 @@
     <title>GRAND TACOS - Gestion des Commandes</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <style>
+        /* Styles pour la modal */
+        .modal {
+            display: none; /* Masqué par défaut */
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.7); /* Fond semi-transparent */
+            justify-content: center;
+            align-items: center;
+        }
+
+        .modal-content {
+            background-color: white;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 500px;
+            width: 90%;
+            text-align: center;
+            position: relative; /* Pour positionner l'icône de fermeture */
+        }
+
+        /* Styles pour l'icône de fermeture */
+        .close-btn {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 24px;
+            font-weight: bold;
+            cursor: pointer;
+            color: #333;
+        }
+
+        .close-btn:hover {
+            color: #ff5722; /* Changement de couleur au survol */
+        }
+    </style>
 </head>
 
 <body>
@@ -155,7 +195,7 @@
     <!-- Modal -->
     <div id="modal" class="modal">
         <div class="modal-content">
-            <span class="close-btn">&times;</span>
+            <span class="close-btn">&times;</span> <!-- Icône de fermeture -->
             <h2 id="modal-title"></h2>
             <p id="modal-description"></p>
             <img id="modal-image" src="" alt="Image de Tacos">
@@ -214,6 +254,35 @@
                 } else {
                     alert("La géolocalisation n'est pas supportée par votre navigateur.");
                 }
+            });
+
+            // Gestion de la modal
+            const modal = document.getElementById('modal');
+            const closeBtn = document.querySelector('.close-btn');
+
+            // Fermer la modal lorsque l'utilisateur clique sur l'icône de fermeture
+            closeBtn.addEventListener('click', () => {
+                modal.style.display = 'none';
+            });
+
+            // Fermer la modal si l'utilisateur clique en dehors de celle-ci
+            window.addEventListener('click', (event) => {
+                if (event.target === modal) {
+                    modal.style.display = 'none';
+                }
+            });
+
+            // Ouvrir la modal lorsqu'une image du slider est cliquée
+            const slides = document.querySelectorAll('.slide');
+            slides.forEach(slide => {
+                slide.addEventListener('click', () => {
+                    const imageSrc = slide.querySelector('img').src;
+                    const title = slide.querySelector('h3').textContent;
+
+                    document.getElementById('modal-image').src = imageSrc;
+                    document.getElementById('modal-title').textContent = title;
+                    modal.style.display = 'flex'; // Afficher la modal
+                });
             });
         });
     </script>
