--- a/public/tacos.html
+++ b/public/tacos.html
@@ -146,7 +146,7 @@
             }
 
             .order .status-container {
-                flex-direction: column;
+                flex-direction: row;
                 gap: 5px;
             }
         }
